# smol-jsonrpc

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: error.rs  lib.rs  request.rs  response.rs
